--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -1,2 +1,10 @@
 // For information on how to create your own theme, please see:
 // http://ionicframework.com/docs/theming/
+
+:root {
+    --ion-color-success:linear-gradient(to top, #2ad208 0%, #ffffff 15%);
+    --ion-color-danger: linear-gradient(to top, #d20808 0%, #ffffff 15%);
+    --ion-color-warning:linear-gradient(to top, #d2be08 0%, #ffffff 15%);
+    --ion-color-base: #FB9224
+}
+
