--- a/src/app/travel-comments-modal/travel-comments-modal.component.scss
+++ b/src/app/travel-comments-modal/travel-comments-modal.component.scss
@@ -47,7 +47,7 @@ ion-item {
 .disabled {
     background-color: #ffffff;
     color: #ffffff;
-    border-radius: 50%; /* Optional: to round the corners */
+    border-radius: 50%;
 }
 
 .flex-center {
