--- a/src/app/notifications/notifications.page.scss
+++ b/src/app/notifications/notifications.page.scss
@@ -16,7 +16,7 @@
 .disabled {
   background-color: #ffffff;
   color: #ffffff;
-  border-radius: 50%; /* Optional: to round the corners */
+  border-radius: 50%;
   margin: 10px 5px 10px 20px;
 }
   
