--- a/src/app/travel-form-modal/travel-form-modal.component.scss
+++ b/src/app/travel-form-modal/travel-form-modal.component.scss
@@ -38,7 +38,7 @@
 .disabled {
     background-color: #ffffff;
     color: #ffffff;
-    border-radius: 50%; /* Optional: to round the corners */
+    border-radius: 50%;
 }
 
 .ion-button {
