--- a/src/app/location-modal/location-modal.component.html
+++ b/src/app/location-modal/location-modal.component.html
@@ -28,6 +28,8 @@
     <ion-datetime 
       class="dateMarginer" 
       [(ngModel)]="location.startAt" 
+      [min]="travelStartAt" 
+      [max]="travelEndAt"
       name="startAt">
     </ion-datetime>
   </ion-item>
