--- a/src/app/location-modal/location-modal.component.html
+++ b/src/app/location-modal/location-modal.component.html
@@ -10,7 +10,7 @@
 <ion-content>
 
   <ion-item>
-    <ion-label position="stacked">Description</ion-label>
+    <ion-label position="stacked">Name</ion-label>
     <ion-textarea [(ngModel)]="location.description" name="description"></ion-textarea>
   </ion-item>
 
