--- a/src/app/trips/trips.page.html
+++ b/src/app/trips/trips.page.html
@@ -3,7 +3,7 @@
   <ion-toolbar>
 
     <ion-buttons class="filter-travel" slot="start">
-      <ion-button>
+      <ion-button (click)="openFilterModal()">
         <ion-icon class="filter-adjust" slot="icon-only" name="funnel"></ion-icon>
       </ion-button>
     </ion-buttons>
