--- a/src/global.scss
+++ b/src/global.scss
@@ -140,6 +140,10 @@ b {
     color: #fb9224 !important;
 }
 
+.alert-message.sc-ion-alert-md {
+    text-align: center !important;
+}
+
 @media screen and (max-width: 500px) 
 { 
   body {
