--- a/src/app/location-comments-modal/location-comments-modal.component.html
+++ b/src/app/location-comments-modal/location-comments-modal.component.html
@@ -18,9 +18,9 @@
   <ion-list>
     <ion-item *ngFor="let comment of comments">
       <ion-label>
-        <h2>{{ comment.createdBy }}</h2>
-        <p>{{ comment.comment }}</p>
+        <p><b>{{ comment.createdBy }}</b></p>
         <p class="comment-date">{{ comment.createdAt | date: 'dd/MM/yy - HH:mm\'h\'' }}</p>
+        <p>{{ comment.comment }}</p>
       </ion-label>
 
       <ion-button fill="clear" slot="end" (click)="deleteLocComment(comment.id)"  class="trash-button">
