--- a/src/app/trips/trips.page.html
+++ b/src/app/trips/trips.page.html
@@ -74,4 +74,11 @@
       </ion-button>
     </div>
   </ion-card>
+
+    <ion-fab vertical="bottom" horizontal="end" slot="fixed" class="fab-custom-size">
+      <ion-fab-button (click)="scrollToTop()" class="fab-custom">
+        <ion-icon name="caret-up-circle"></ion-icon>
+      </ion-fab-button>
+    </ion-fab>
+
 </ion-content>
