--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -5,6 +5,7 @@
     --ion-color-success:linear-gradient(to top, #2ad208 0%, #ffffff 15%);
     --ion-color-danger: linear-gradient(to top, #d20808 0%, #ffffff 15%);
     --ion-color-warning:linear-gradient(to top, #d2be08 0%, #ffffff 15%);
-    --ion-color-base: #FB9224
+    --ion-color-base: #FB9224;
+    --ion-color-primary: #FB9224;
+    --ion-color-primary-rgb: 255, 227, 130;
 }
-
